FIX: Styling change to stop the login_box div from overlapping the header
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@8110 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1150,7 +1150,7 @@ a.FeaturedSimpleLink:hover {
 	padding: 10px 15px 0px 15px;
 	border-radius: 5px;
 	position: absolute;
-    top: -300px;
+    top: -150px;
 }
 
 /* Manage External Shares */
